Adding devices and demos